tests/fixtures/errors/ctor_unknown_arg.z
# E0300: a constructor argument that is not a field / create parameter.
Widget: class {
    id: u64
    name: u64
}
main: function is {
    w: Widget id: 1 name: 2 bogus: 3
    print "\{w.id}"
}
